# AutoNews

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  pyproject.toml
scripts/: README.md  parser.py  pyproject.toml
scripts/api/: whisper.py
scripts/crawler/: dcard.py  youtube.py
src/: parser.py
src/api/: whisper.py
src/crawler/: dcard.py  youtube.py
